--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-google-maps": "^9.4.5",
+    "react-image-show": "^0.2.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "react-swipe-deck": "^0.1.17",
